2017-01-26         Manuel Collado       <m-collado@users.sourceforge.net>

	* xhtml2man.awk xhtml2texti.awk: XHTML source documents converters.
	* Makefile.am gawk-xml.texi: Automate the document generation process.

2017-01-26         Manuel Collado       <m-collado@users.sourceforge.net>

	* xmlbase.xhtml xmlcopy.xhtml xmlsimple.xhtml xmltree.xhtml xmlwrite.xhtml:
	Add XHTML source documents.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawk-xml.texi: Fix FSF address.

2014-12-14         Manuel Collado       <m-collado@users.sourceforge.net>

	* gawk-xml.texi: Added placeholders for xml*.awk reference sections.
	Removed Appendices A and B.

2014-12-08         Manuel Collado       <m-collado@users.sourceforge.net>

	* gawk-xml.texi: Added content to Chapter 4 from the S. Tramm webpage

2014-11-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am: include shared/doc.makefile.

2014-11-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawk-xml.texi: Update versions and fix @load syntax.

2014-10-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawk-xml.texi: Fix @setfilename and remove some obsolete references
	to xgawk.

2014-10-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawk-xml.texi: Renamed from gawkextlib.texi.  Removed documentation
	of other extensions that now have separate texinfo files.

2014-04-16         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkextlib.texi: Replace xgawk with gawk in a few places.

2012-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am: Rename xmlgawk to gawkextlib.
	* xmlgawk.texi: Rename as gawkextlib.texi.
	* gawkextlib.texi: Replace xmlgawk with gawkextlib in a few places.
	Much more work remains to be done on the documentation.

2012-07-09         Andrew J. Schorr     <aschorr@telemetry-investments.com>
